Thu Apr 03 05:46:44 GMT 2014  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/omenquireinternal.h,common/submatch.h,matcher/,
	  net/remoteserver.cc,net/serialise.cc,weight/weight.cc,
	  weight/weightinternal.cc,weight/weightinternal.h: Eliminate the
	  map<string, TermFreqAndWeight> in MSet::Internal, and instead just
	  preserve the Weight::Internal object there as that holds all the
	  information we need.

Thu Apr 03 04:40:09 GMT 2014  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,net/remoteserver.cc,
	  net/serialise.cc,net/serialise.h: Avoid returning
	  Xapian::Weight::Internal by value from unserialise_stats().

Tue Apr 01 22:41:16 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc,weight/weight.cc,weight/weightinternal.cc,
	  weight/weightinternal.h: Replace Weight::Internal methods to get
	  termfreq, reltermfreq and colltermfreq with a single inlined
	  get_stats() method, which only needs to search the map once.
	  Shaves ~1.6% off the time to do a wildcard query with a lot of
	  terms.

Tue Apr 01 22:11:52 GMT 2014  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Don't refetch the termfreq if we already
	  have it.

Sun Mar 30 22:54:22 GMT 2014  Anish Kanchan <anishgkanchan@gmail.com>

	* include/xapian/termgenerator.h: Make TermGenerator flags an
	  anonymous enum, and typedef TermGenerator::flags to int for backward
	  compatibility with existing user code which uses it.  (fixes #616)

Thu Mar 27 05:45:14 GMT 2014  Liu Chi <liuchi09@gmail.com>

	* include/xapian/stem.h,languages/Makefile.mk,
	  languages/earlyenglish.sbl,languages/stem.cc,tests/api_stem.cc:
	  Add an early english stemmer.

Wed Mar 19 02:42:00 GMT 2014  Olly Betts <olly@survex.com>

	* weight/weightinternal.cc: Fix comment typo.

Fri Mar 14 09:53:22 GMT 2014  Olly Betts <olly@survex.com>

	* HACKING: MacTeX seems to be the best option if using homebrew.

Fri Mar 07 23:17:43 GMT 2014  Olly Betts <olly@survex.com>
